[project]
name = "thought_logger"
version = "0.1.0a"
description = ""
authors = [
    {name = "Bitjockey", email = "bitjockey@jackpoint.network"},
]
dependencies = [
    "torch>=1.11.0",
    "transformers>=4.19.4",
    "tqdm>=4.64.0",
    "click>=8.1.3"]
requires-python = ">=3.9"
license = {text = "MIT"}
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "pytest>=7.1.2",
]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
