[project]
name = "thought-log"
version = "0.1.0b5"
description = "Test thing"
authors = [
    {name = "Bitjockey", email = "bitjockey@jackpoint.network"},
]
dependencies = [
    "torch>=1.11.0",
    "transformers>=4.20.1",
    "tqdm>=4.64.0",
    "click>=8.1.3",
    "pytermgui>=6.4.0",
    "appdirs>=1.4.4",
    "requests>=2.28.0",
    "tdqm>=0.0.1",
    "python-frontmatter>=1.0.0",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]
version = {use_scm = true}
package-dir = "src"

[project.scripts]
"thlog" = "thought_log.cli:cli"
"thought-log" = "thought_log.cli:cli"

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "pytest>=7.1.2",
    "twine>=4.0.1",
    "ipython>=8.4.0",
]

[tool.pdm.scripts]
format = "black ."

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
