[project]
name = "thought-log"
version = "0.1.0"
description = "Test thing"
authors = [
    {name = "Bitjockey", email = "bitjockey@jackpoint.network"},
]
dependencies = [
    "torch>=1.11.0",
    "transformers>=4.20.1",
    "tqdm>=4.64.0",
    "click>=8.1.3",
    "pytermgui>=6.4.0",
    "appdirs>=1.4.4",
    "requests>=2.28.0",
    "tdqm>=0.0.1",
    "python-frontmatter>=1.0.0",
    "pytz>=2022.1",
    "spacy>=3.3.1",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.3.0/en_core_web_sm-3.3.0-py3-none-any.whl",
    "huggingface-hub>=0.8.1",
    "pytest-freezegun>=0.4.2",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[tool.pdm]
version = {use_scm = true}
package-dir = "src"

[project.scripts]
"tl" = "thought_log.cli:cli"
"thought-log" = "thought_log.cli:cli"

[project.optional-dependencies]

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.3.0",
    "isort>=5.10.1",
    "pytest>=7.1.2",
    "twine>=4.0.1",
    "ipython>=8.4.0",
    "autoflake>=1.4",
]

[tool.pdm.scripts]
tests = "pytest -vv tests/"
format = "black ."
autoremove = "autoflake --in-place --remove-all-unused-imports src/**/*.py --exclude __init__.py"

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
